--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,14 @@ travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 
+diag_preamble = | $post_diag = sub {
+diag_preamble = |   use Alien::Alien;
+diag_preamble = |   diag "version      = @{[ Alien::Alien->version      ]}";
+diag_preamble = |   diag "install_type = @{[ Alien::Alien->install_type ]}";
+diag_preamble = | };
+
+[AlienBuild]
+
 [RemovePrereqs]
 remove = strict
 remove = warnings
@@ -22,3 +30,7 @@ remove = base
 [Author::Plicease::Upload]
 cpan = 0
 
+[PruneFiles]
+filename = xt/author/pod_coverage.t
+filename = xt/author/version.t
+filename = xt/author/pod_spelling_common.t
