--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,8 @@ version          = 0.01
 travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
+irc           = irc://irc.perl.org/#native
+test2_v0      = 1
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   use Alien::Alien;
