--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
 
 install:
   - perlbrew list
+  - ./maint/travis-install-alienbuild 
   - cpanm -n App::af
   - af missing | cpanm -n
   - cpanm -n Dist::Zilla
