switch to using extract plugin eh?

--- a/dist.ini
+++ b/dist.ini
@@ -26,8 +26,9 @@ remove = strict
 remove = warnings
 remove = base
 
-;[Prereqs]
-;Foo::Bar = 0
+[Prereqs / ConfigureRequires]
+-phase = configure
+Alien::Build = 0.63
 
 [Author::Plicease::Upload]
 cpan = 1
