--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2017
-version          = 0.01
+version          = 0.02
 
 [@Author::Plicease]
 :version      = 2.20
@@ -37,3 +37,4 @@ cpan = 1
 filename = xt/author/pod_coverage.t
 filename = xt/author/version.t
 filename = xt/author/pod_spelling_common.t
+filename = xt/author/pod_spelling_system.t
