--- a/dist.ini
+++ b/dist.ini
@@ -38,3 +38,6 @@ filename = xt/author/pod_coverage.t
 filename = xt/author/version.t
 filename = xt/author/pod_spelling_common.t
 filename = xt/author/pod_spelling_system.t
+
+[Author::Plicease::TravisInstall]
+repo = plicease/App-af
