--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ addons:
 
 install:
   - perlbrew list
-  - cpanm -n App::af
+  - ./maint/travis-install-mods
+  - af missing --plugin | cpanm n
   - af missing | cpanm -n
   - cpanm -n Dist::Zilla
   - dzil authordeps --missing | cpanm -n
