CI also needs latest AB

--- a/dist.ini
+++ b/dist.ini
@@ -40,4 +40,5 @@ filename = xt/author/pod_spelling_common.t
 filename = xt/author/pod_spelling_system.t
 
 [Author::Plicease::TravisInstall]
+repo = Perl5-Alien/Alien-Build
 repo = plicease/App-af
