--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 install:
   - perlbrew list
   - ./maint/travis-install-mods
-  - af missing --plugin | cpanm n
+  - af missing --plugin | cpanm -n
   - af missing | cpanm -n
   - cpanm -n Dist::Zilla
   - dzil authordeps --missing | cpanm -n
