--- a/dist.ini
+++ b/dist.ini
@@ -5,13 +5,16 @@ copyright_holder = Graham Ollis
 copyright_year   = 2017
 version          = 0.02
 
+; authordep Alien::Build::Plugin::Decode::SourceForge
+
 [@Author::Plicease]
-:version      = 2.20
-travis_status = 1
+:version      = 2.62
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
+
+workflow = linux
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   use Alien::Alien;
@@ -39,6 +42,3 @@ filename = xt/author/version.t
 filename = xt/author/pod_spelling_common.t
 filename = xt/author/pod_spelling_system.t
 
-[Author::Plicease::TravisInstall]
-repo = Perl5-Alien/Alien-Build
-repo = plicease/App-af
