enable system install for older Perls

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -51,28 +51,28 @@ jobs:
             install_type: system
           - tag: "5.20"
             install_type: share
-#          - tag: "5.18"
-#            install_type: system
+          - tag: "5.18"
+            install_type: system
           - tag: "5.18"
             install_type: share
-#          - tag: "5.16"
-#            install_type: system
+          - tag: "5.16"
+            install_type: system
           - tag: "5.16"
             install_type: share
-#          - tag: "5.14"
-#            install_type: system
+          - tag: "5.14"
+            install_type: system
           - tag: "5.14"
             install_type: share
-#          - tag: "5.12"
-#            install_type: system
+          - tag: "5.12"
+            install_type: system
           - tag: "5.12"
             install_type: share
-#          - tag: "5.10"
-#            install_type: system
+          - tag: "5.10"
+            install_type: system
           - tag: "5.10"
             install_type: share
-#          - tag: "5.8"
-#            install_type: system
+          - tag: "5.8"
+            install_type: system
           - tag: "5.8"
             install_type: share
 
